<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_view"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineView"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/alert_delete_single"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:background="@drawable/selector_delete_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="20sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="80dp"
            android:layout_height="36sp"
            android:background="@drawable/selector_delete_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </TableRow>

</RelativeLayout>